--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div id="battlePhase" class="phase hidden">
         <h2>Battle Phase</h2>
         <!-- Battle inputs would go here -->
+        <div id="lifePointsOverview"></div>
         <button onclick="endBattlePhase()">End Battle Phase</button>
     </div>
 
