--- a/index.html
+++ b/index.html
@@ -4,33 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheepshead: Trickster Variant Companion</title>
-    <style>
-        .hidden { display: none; }
-        .phase { margin-bottom: 20px; }
-        .player-section { margin-bottom: 10px; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Game Setup Section -->
     <div id="gameSetup">
         <h1>Sheepshead: Trickster Variant Companion</h1>
-        Number of Players:
-        <select id="numPlayers">
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-        </select>
-        <br><br>
-        Select Game Variant:
-        <select id="gameVariant" onchange="changeGameVariant()">
-            <option value="base">Base Game</option>
-            <option value="yugioh">Accessible Variant with Yu-Gi-Oh! Cards</option>
-        </select>
-        <br><br>
+        <div>
+            Number of Players:
+            <input type="number" id="numPlayers" value="2" min="2" max="8">
+        </div>
+        <div>
+            Select Game Variant:
+            <select id="gameVariant" onchange="changeGameVariant()">
+                <option value="base">Base Game</option>
+                <option value="yugioh">Accessible Variant with Yu-Gi-Oh! Cards</option>
+            </select>
+        </div>
         <button onclick="initializeGame()">Start Game</button>
     </div>
 
@@ -45,6 +35,7 @@
     <div id="trickTakingPhase" class="phase hidden">
         <h2>Trick Taking Phase</h2>
         <div id="trickTakingInputs"></div>
+        <button onclick="calculateTrickResults()">Calculate Trick Results</button>
         <button onclick="endTrickTakingPhase()">End Trick Taking Phase</button>
         <div id="trickResult"></div>
     </div>
@@ -61,7 +52,6 @@
     <div id="battlePhase" class="phase hidden">
         <h2>Battle Phase</h2>
         <!-- Battle inputs would go here -->
-        <div id="lifePointsOverview"></div>
         <button onclick="endBattlePhase()">End Battle Phase</button>
     </div>
 
@@ -69,6 +59,13 @@
     <div id="endPhase" class="phase hidden">
         <h2>End Phase</h2>
         <button onclick="nextRound()">Start Next Round</button>
+    </div>
+
+    <!-- Life Points and Summoning Points Display -->
+    <div id="statusBar">
+        <h2>Player Status</h2>
+        <div id="lifePointsOverview"></div>
+        <div id="summoningPointsOverview"></div>
     </div>
 
     <!-- Script Section -->
