--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheepshead: Trickster Variant Companion</title>
-    <style>
-        .hidden { display: none; }
-        .phase { margin-bottom: 20px; }
-        .player-section { margin-bottom: 10px; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Sheepshead: Trickster Variant Companion</h1>
     <!-- Game Setup Section -->
     <div id="gameSetup">
-        Number of Players: <input type="number" id="numPlayers" value="2" min="2" max="8"><br><br>
-        Select Game Variant:
-        <select id="gameVariant" onchange="changeGameVariant()">
-            <option value="base">Base Game</option>
-            <option value="yugioh">Accessible Variant with Yu-Gi-Oh! Cards</option>
-        </select><br><br>
+        <h1>Sheepshead: Trickster Variant Companion</h1>
+        <div>
+            Number of Players: 
+            <input type="number" id="numPlayers" min="2" max="8" value="2">
+        </div>
+        <div>
+            Select Game Variant: 
+            <select id="gameVariant" onchange="changeGameVariant()">
+                <option value="base">Base Game</option>
+                <option value="yugioh">Accessible Variant with Yu-Gi-Oh! Cards</option>
+            </select>
+        </div>
         <button onclick="initializeGame()">Start Game</button>
     </div>
 
-    <!-- Player Stats -->
-    <div id="playerStats" class="phase"></div>
+    <!-- Player Stats Overview -->
+    <div id="playerStatsOverview" class="hidden">
+        <h3>Player Stats Overview:</h3>
+        <div id="playerStats"></div>
+    </div>
 
     <!-- Bidding Phase -->
     <div id="biddingPhase" class="phase hidden">
@@ -37,9 +42,9 @@
     <div id="trickTakingPhase" class="phase hidden">
         <h2>Trick Taking Phase</h2>
         <div id="trickTakingInputs"></div>
-        <button onclick="calculateTrickResults()">Calculate Trick Results</button>
-        <button onclick="endTrickTakingPhase()">End Trick Taking Phase</button>
+        <button onclick="calculateTrickResults()">Calculate Trick</button>
         <div id="trickResult"></div>
+        <button onclick="endTrickTakingPhase()">End Trick Taking Phase</button>
     </div>
 
     <!-- Summoning Phase -->
@@ -62,8 +67,5 @@
         <h2>End Phase</h2>
         <button onclick="nextRound()">Start Next Round</button>
     </div>
-
-    <!-- Script Section -->
-    <script src="script.js"></script>
 </body>
 </html>
