--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="yugioh">Accessible Variant with Yu-Gi-Oh! Cards</option>
             </select>
         </div>
-        <button id="startGame">Start Game</button>
+        <button id="startGame" onclick="initializeGame()">Start Game</button>
     </div>
 
     <!-- Player Stats Overview -->
@@ -67,5 +67,7 @@
         <h2>End Phase</h2>
         <button id="nextRound">Start Next Round</button>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
