--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Sheepshead: Trickster Variant Companion</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobile-Friendly Meta Tag -->
 </head>
 <body>
     <!-- Game Setup Section -->
     <div id="gameSetup">
         <h1>Sheepshead: Trickster Variant Companion</h1>
-        <div>
+        <div class="form-group">
             <label for="numPlayers">Number of Players:</label>
             <input type="number" id="numPlayers" min="2" max="8" value="2">
         </div>
-        <div>
+        <div class="form-group">
             <label for="gameVariant">Select Game Variant:</label>
             <select id="gameVariant" onchange="changeGameVariant()">
                 <option value="base">Base Game</option>
