--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- Toggle View Button -->
         <div id="navigation">
-            <button id="toggleView">Switch to Play Zone</button>
+            <button id="toggleToPlayZone">Switch to Play Zone</button>
         </div>
     </div>
 
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div id="navigation">
-            <button id="toggleView">Switch to Game Companion</button>
+            <button id="toggleToGameCompanion">Switch to Game Companion</button>
         </div>
     </div>
 
