--- a/index.html
+++ b/index.html
@@ -86,8 +86,17 @@
                 <div id="hand-cards" class="card-container"></div>
             </div>
             <div class="card-zone">
-                <h2>Play Area</h2>
+                <h2>Your Played Cards</h2>
                 <div id="play-area-cards" class="card-container"></div>
+            </div>
+            <!-- AI Opponents' Played Cards -->
+            <div class="ai-opponents">
+                <!-- For AI Player 2 -->
+                <div class="ai-player-zone">
+                    <h2>AI Player 2's Played Cards</h2>
+                    <div id="ai-player-1-cards" class="card-container"></div>
+                </div>
+                <!-- Add more AI player zones if numPlayers > 2 -->
             </div>
         </div>
         <div id="navigation">
